# klin-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  skills-lock.json  tailwind-animate.d.ts  tailwind.config.ts  test.setup.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
brunoapi/: collection.bru
brunoapi/categories/: delete-category-template.bru  get-categories.bru  patch-category-template.bru  post-batch-seed-categories.bru  post-create-category-finance.bru  post-create-category-travel.bru  post-create-category-work.bru
brunoapi/history/: get-history-list.bru
brunoapi/notes/: post-summarize-notes.bru
brunoapi/search/: post-search-files.bru
docs/: BRUNO_MOCK_API_CLEANUP.md  llama-server-lifecycle.md
klin/: bruno.json  collection.bru
scripts/: LLAMA_SERVER_SETUP_GUIDE.md  check_size.sh  check_version.sh  organize-api-server.mjs  setup_llama.sh
scripts/logs/: llama-build-latest-mac.json  llama-build-latest-windows.json
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: klin-worker-aarch64-apple-darwin  llama-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  automation_commands.rs  file_commands.rs  history_commands.rs  llama_commands.rs  log_commands.rs  logging_commands.rs  mod.rs  model_commands.rs  note_commands.rs  oauth_commands.rs  path_commands.rs  rule_commands.rs
src-tauri/src/domain/: ai_provider_factory.rs  dto.rs  entities.rs  file_command.rs  file_operations.rs  mod.rs  repository_traits.rs  scoring_strategy.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/infrastructure/: app_paths.rs  fs_ops.rs  logging.rs  mod.rs  runtime_env.rs  watcher.rs
src-tauri/src/repositories/: json_automation_config_repository.rs  json_category_repository.rs  json_history_repository.rs  json_log_repository.rs  json_rule_repository.rs  mod.rs
src-tauri/src/services/: category_service.rs  file_service.rs  folder_stats_cache.rs  folder_stats_watcher.rs  history_service.rs  log_service.rs  mod.rs  rule_service.rs
src-tauri/src/sidecars/: klin_worker.rs  llama_server.rs  mod.rs
(+181 files in other folders)
