[package]
name = "klin-app"
version = "1.0.0"
description = "Klin automation-first desktop organizer"
authors = ["Klin Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "klin_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
notify = "8.2"
parking_lot = "0.12"
once_cell = "1"
rfd = "0.17.2"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri-winres]
ProductName = "KLIN"
FileDescription = "Klin automation-first desktop organizer"
OriginalFilename = "klin-app.exe"
